--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.0",
     "@prisma/client": "^5.11.0",
+    "cors": "^2.8.5",
     "prisma": "^5.11.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
